<resources>
	<string name="hello">Hello World, SLWP!</string>
	<string name="app_name">EarthRot</string>
	<string name="description">Rotating earth globe (Opengl VBO)</string>
	<string name="p_speed">Rotation speed</string>
	<string name="p_speedsum">Choose the globe rotation speed</string>
	<string name="p_clouds">Clouds</string>
	<string name="p_cloudson">Clouds are shown</string>
	<string name="p_cloudsoff">CLouds are hidden</string>
	<string name="p_touchrot">Touch rotation</string>
	<string name="p_touchroton">Globe rotation on touch is on</string>
	<string name="p_touchrotoff">Globe rotation on touch is off</string>
	<string name="p_textures">Map</string>
	<string name="p_texturessum">Choose the globe map</string>
	<string name="p_dir">Natural Rotation</string>
	<string name="p_diron">Globe rotation is natural</string>
	<string name="p_diroff">Globe rotation is inverted</string>
	<string name="p_freespin">Free rotation</string>
	<string name="p_freespinon">Globe rotate around 2 axis</string>
	<string name="p_freespinoff">Globe rotate around 1 axis</string>
	<string name="p_zoom">Globe size</string>
	<string name="p_zoomsum">increase or shrink the globe radius</string>
	<string name="p_bg">Choose background</string>
	<string name="p_bgsum">Choose the background to display</string>
	<string name="p_usebg">Show background</string>
	<string name="p_usebgon">Background is on</string>
	<string name="p_usebgoff">Background is off</string>
	<string name="p_ref">Refresh rate</string>
	<string name="p_refsum">Choose how often the realtime map is refreshed (around 70KB of datas downloaded on each refresh)</string>
	<string name="p_refdesc">Be carerefull !! each refresh consume around 70KB of datas</string>
	<string name="texerror">Error loading texture</string>
	<string name="p_raxis">Planet natural axis</string>
	<string name="p_raxison">Rotate around planet\'s natural axis</string>
	<string name="p_raxisoff">Rotate around vertical axis</string>
	<string name="p_bgsdir">Inverse background sliding</string>
	<string name="p_bgsdiron">Background is sliding opposite to the screen</string>
	<string name="p_bgsdiroff">Background is sliding like the screen </string>
	<string name="p_slidep">Slide globe</string>
	<string name="p_slidepon">Globe is sliding with screen</string>
	<string name="p_slidepoff">Globe position is fixed</string>
	<string name="p_syncrot">Slide rotation</string>
	<string name="p_syncroton">Globe is rotating synchronous with screen (better if rot. speed=0)</string>
	<string name="p_syncrotoff">Globe isn\'t rotating synchronous with screen</string>
	<string name="p_xpos">Globe x position</string>
	<string name="p_xpossum">move the globe horizontally on screen</string>
	<string name="p_ypos">Globe y position</string>
	<string name="p_ypossum">move the globe vertically on screen</string>
	<string name="p_showmoon">Orbiting moon</string>
	<string name="p_showmoonsum">Show the moon orbiting around earth</string>
	<string name="p_randlistsum">Choose the maps to use in random map mode</string>
	<string name="p_randlist">Random List</string>
	<string name="p_animbgsum">Make the background slide slowly</string>
	<string name="p_animbg">Animate background</string>
	<string name="p_ga">Globe aspect</string>
	<string name="p_gas">Change globe aspect and position</string>
	<string name="p_gb">Globe behavior</string>
	<string name="p_gbs">Change how you interact with the globe</string>
	<string name="p_m">Maps</string>
	<string name="p_ms">Choose the planet to display</string>
	<string name="p_b">Background</string>
	<string name="p_bs">Choose the background</string>
	<string name="p_s">Starfield</string>
	<string name="p_ss">Add an animated starfield</string>
	<string name="p_f">Foreground</string>
	<string name="p_fs">Run the wallpaper in foreground (avoid some crashes)</string>
	<string name="p_ps">Starfield</string>
	<string name="p_pss">Display a starfield</string>
	<string name="p_sspeed">Stars speed</string>
	<string name="p_ssspeed">Set the stars max speed</string>
	<string name="p_sdens">Stars density</string>
	<string name="p_ssdens">Set the number of stars</string>
	<string name="p_usesh">Static lightmap</string>
	<string name="p_susesh">Add a static lightmap to all planets to simulate night and day</string>
	<string name="p_showtext">Show name</string>
	<string name="p_sshowtext">Show the name of the planet</string>
	<string name="p_lypos">Text position</string>
	<string name="p_slypos">Choose the text vertical position</string>
	<string name="p_darkness">Night darkness</string>
	<string name="p_sdarkness">Set the static night intensity</string>
	<string name="p_usecrop">Crop custom background</string>
	<string name="p_susecrop">Activate if custom background don\'t show. it force a correct aspect ratio.</string>
	<string name="p_cropaspect">Crop aspect ratio</string>
	<string name="p_scropaspect">Choose the crop aspect ratio to compute final texture size</string>
	<string name="p_randrate">Random refresh rate</string>
	<string name="p_srandrate">Choose how often the random map change</string>
	<string-array name="tex_id">
		<item>Random each wakeup</item>
		<item>Realtime Earth+Clouds</item>
		<item>Static Earth+Clouds</item>
		<item>Earth</item>
		<item>Earth city lights</item>
		<item>Sun</item>
		<item>Moon</item>
		<item>Mars</item>
		<item>Mercury</item>
		<item>Venus</item>
		<item>Jupiter</item>
		<item>Saturn</item>
		<item>Uranus</item>
		<item>Neptune</item>
		<item>Io</item>
		<item>Titan</item>
		<item>Callisto</item>
		<item>Europa</item>
		<item>Ganymede</item>
		<item>Phoebe</item>
		<item>Endor moon</item>
		<item>Endor moon+clouds</item>
		<item>Tatooine</item>
		<item>Naboo</item>
		<item>Naboo+clouds</item>
		<item>Hoth</item>
		<item>Geonosis</item>
		<item>Mustafar</item>
		<item>Coruscant</item>
		<item>Utapau</item>
		<item>Yavin4</item>
		<item>Kamino</item>
		<item>Dagobah</item>
		<item>Bespin</item>
		<item>Yavin</item>
		<item>DeathStar 1</item>
		<item>DeathStar 2</item>
		<item>Cardassia Prime</item>
		<item>Ferenginar</item>
		<item>Qo\'nos</item>
		<item>Romulus</item>
		<item>Remus</item>
		<item>Vulcan</item>
		<item>Borg Sphere</item>
		<item>Futurama Earth</item> 
		<item>Futurama Moon</item> 
		<item>Futurama Mars</item> 
		<item>Futurama Neptune</item> 
		<item>Globetrotter Home World</item> 
		<item>Eternium</item> 
		<item>Omicron Persei 8</item> 
		<item>Trisol</item> 
		<item>Decapod 10</item>
		<item>Erios</item> 
		<item>Hades</item> 
		<item>Hell</item> 
		<item>Newton</item> 
		<item>Pandora</item> 
		<item>Phele</item> 
		<item>Polyphemus</item> 
		<item>Seneka</item> 
		<item>Vergilius</item> 
		<item>Krypton</item>
		<item>Cybertron</item> 
		<item>Golf ball</item> 
		<item>Beach ball</item>
		<item>Soccer ball</item>
		<item>Old soccer ball</item>
		<item>Softball ball</item>
		<item>Arthur</item>
        <item>Castra</item>
        <item>Deuteros</item>
        <item>DiYi</item>
        <item>Drittes</item>
        <item>Ektos</item>
        <item>Erstes</item>
        <item>Ford</item>
        <item>Marvin</item>
        <item>Pentos</item>
        <item>Pervaya</item>
        <item>Primus</item>
        <item>Protos</item>
        <item>Quartus</item>
        <item>Quintus</item>
        <item>RealisticEarth</item>
        <item>Secundus</item>
        <item>Septimus</item>
        <item>Sextus</item>
        <item>TerraformedPluto</item>
        <item>Tertius</item>
        <item>Tetartos</item>
        <item>Trillian</item>
        <item>Tritos</item>
        <item>Viertes</item>
        <item>Vtoraya</item>
        <item>Zaphod</item>
        <item>Zweites</item>
        <item>allatu</item>
        <item>amoon3</item>
        <item>annunaki</item>
        <item>anu</item>
        <item>arazius1</item>
        <item>arazius2</item>
        <item>arazius3</item>
        <item>arazius4</item>
        <item>arazius4moon</item>
        <item>arazius5</item>
        <item>araziusasteroid</item>
        <item>asteroid</item>
        <item>batavorum</item>
        <item>dagan</item>
        <item>ellil</item>
        <item>elohim</item>
        <item>enki</item>
        <item>enlil</item>
        <item>enoch</item>
        <item>eridoe</item>
        <item>future</item>
        <item>hanish</item>
        <item>irra</item>
        <item>ishtar</item>
        <item>kishar</item>
        <item>kukulkan</item>
        <item>marduk</item>
        <item>moon4</item>
        <item>moon5</item>
        <item>moon8</item>
        <item>moon_terraformed</item>
        <item>nabu</item>
        <item>namtar</item>
        <item>naphidem</item>
        <item>nash</item>
        <item>nazca</item>
        <item>nephilim</item>
        <item>nergal</item>
        <item>ninurta</item>
        <item>papsukkal</item>
        <item>qingu</item>
        <item>sakkara</item>
        <item>sharru</item>
        <item>siduri</item>
        <item>sin</item>
        <item>snowballEarth</item>
        <item>tarazed-ananda</item>
        <item>tarazed-aoraki</item>
        <item>tarazed-aphrodite</item>
        <item>tarazed-ashura</item>
        <item>tarazed-castle</item>
        <item>tarazed-cieloazul</item>
        <item>tarazed-dragonfire</item>
        <item>tarazed-eshq</item>
        <item>tarazed-esperanza</item>
        <item>tarazed-garden</item>
        <item>tarazed-honshu</item>
        <item>tarazed-ib</item>
        <item>tarazed-iib</item>
        <item>tarazed-iic</item>
        <item>tarazed-iid</item>
        <item>tarazed-iie</item>
        <item>tarazed-iowa</item>
        <item>tarazed-ivb</item>
        <item>tarazed-namaskar</item>
        <item>tarazed-pratyahara</item>
        <item>tarazed-purgatory</item>
        <item>tarazed-rockball</item>
        <item>tarazed-sys</item>
        <item>tarazed-vb</item>
        <item>tarazed-vc</item>
        <item>tarazed-vd</item>
        <item>tarazed-vib</item>
        <item>tarazed-vic</item>
        <item>tarazed-vid</item>
        <item>tarazed-viiib</item>
        <item>tarazed-viiic</item>
        <item>tarazed-viiid</item>
        <item>tarazed-viiie</item>
        <item>tarazed-viiif</item>
        <item>tarazed-wanderer</item>
        <item>tarazed-xib</item>
        <item>tarazed-xic</item>
        <item>tarazed-xiib</item>
        <item>tarazed-xiic</item>
        <item>tarazed-xivb</item>
        <item>tarazed-xivc</item>
        <item>tarazed-xivd</item>
        <item>tarazed-xixb</item>
        <item>tarazed-xvb</item>
        <item>tarazed-xvc</item>
        <item>tarazed-xvd</item>
        <item>tarazed-xve</item>
        <item>tarazed-xvf</item>
        <item>tarazed-xvg</item>
        <item>tarazed-xvh</item>
        <item>tarazed-xvib</item>
        <item>tarazed-xviib</item>
        <item>tarazed-xviic</item>
        <item>tarazed-xviiib</item>
        <item>tarazed-xviiic</item>
        <item>tarazed-xviiid</item>
        <item>tarazed-yesod</item>
        <item>tarazed-yetzirah</item>
        <item>terraformedmoon</item>
        <item>tiamat</item>
        <item>veleda</item>
        <item>vimana</item>
        <item>yukatan</item>
        <item>zaltu</item>   
	</string-array>
</resources>